// style/anim repair

--- a/app/src/main/res/layout/dialog_from_bottom.xml
+++ b/app/src/main/res/layout/dialog_from_bottom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
 
     <TextView
         android:id="@+id/dfb_tv_take_photo"
@@ -11,12 +11,13 @@
         android:background="@android:color/white"
         android:gravity="center"
         android:text="拍照"
-        android:textSize="18dp" />
+        android:textColor="@android:color/tab_indicator_text"
+        android:textSize="18dp"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="#e1e1e1" />
+        android:background="#e1e1e1"/>
 
     <TextView
         android:id="@+id/dfb_tv_gallery"
@@ -25,12 +26,13 @@
         android:background="@android:color/white"
         android:gravity="center"
         android:text="从相册中选择"
-        android:textSize="18dp" />
+        android:textColor="@android:color/tab_indicator_text"
+        android:textSize="18dp"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="#e1e1e1" />
+        android:background="#e1e1e1"/>
 
     <TextView
         android:id="@+id/dfb_tv_cancel"
@@ -39,6 +41,7 @@
         android:background="@android:color/white"
         android:gravity="center"
         android:text="取消"
-        android:textSize="18dp" />
+        android:textColor="@android:color/tab_indicator_text"
+        android:textSize="18dp"/>
 
 </LinearLayout>
