修改MDBuilder中全屏问题

--- a/lib/src/main/res/values/dialog_style.xml
+++ b/lib/src/main/res/values/dialog_style.xml
@@ -10,6 +10,14 @@
         <item name="android:backgroundDimEnabled">true</item>  <!-- 是否模糊显示 -->
     </style>
 
+    <style name="md_dialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowFrame">@null</item>  <!-- 是否有边框 -->
+        <item name="android:windowIsFloating">true</item>  <!-- 是否浮在Activity上 -->
+        <item name="android:windowNoTitle">true</item>    <!-- 是否浮显示标题 -->
+        <item name="android:windowIsTranslucent">true</item>    <!-- 是否半透明 -->
+        <item name="android:backgroundDimEnabled">true</item>  <!-- 是否模糊显示 -->
+    </style>
+
     <style name="dialog_from_bottom_anim">
         <item name="android:windowEnterAnimation">@anim/dialog_from_bottom_anim_in</item>
         <item name="android:windowExitAnimation">@anim/dialog_from_bottom_anim_out</item>
