--- a/lib/src/main/res/layout/dialog_material.xml
+++ b/lib/src/main/res/layout/dialog_material.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,29 +10,31 @@
 
     <TextView
         android:id="@+id/dialog_material_tv_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-        tools:text="温馨提示"
         android:textColor="#333333"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        tools:text="温馨提示" />
 
     <TextView
         android:id="@+id/dialog_material_tv_content"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/dialog_material_tv_title"
         android:layout_marginTop="20dp"
         android:lineSpacingExtra="4dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        tools:text="是否确定退出？"
         android:textColor="#999999"
-        android:textSize="16dp" />
+        android:textSize="16dp"
+        tools:text="是否确定退出？" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/dialog_material_tv_content"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="20dp"
         android:gravity="right"
@@ -42,33 +44,31 @@
             android:id="@+id/dialog_material_tv_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
             android:background="@drawable/dialog_btn_bg"
             android:paddingBottom="5dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:paddingTop="5dp"
-            tools:text="取消"
-            android:layout_marginRight="10dp"
-            android:textColor="#666666"
+            android:textColor="#a9a2a2"
             android:textSize="16dp"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:text="取消" />
 
         <TextView
             android:id="@+id/dialog_material_tv_confirm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
             android:background="@drawable/dialog_btn_bg"
             android:paddingBottom="5dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:paddingTop="5dp"
-            tools:text="确定"
-            android:layout_marginRight="10dp"
+            android:textColor="#eb2959"
             android:textSize="16dp"
-            android:textColor="#498dff"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:text="确定" />
 
     </LinearLayout>
-
-
-</LinearLayout>
+</RelativeLayout>
