新增点击dialog中非EditText区域时隐藏软键盘

--- a/app/src/main/res/layout/dialog_common.xml
+++ b/app/src/main/res/layout/dialog_common.xml
@@ -31,6 +31,17 @@
         android:textSize="14dp"
         tools:text="我是内容我是内容我是内容我是内容我是内容我是内容我是内容我是内容我是内容我是内容我是内容" />
 
+
+    <EditText
+        android:id="@+id/dcu_et_input"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@null"
+        android:hint="请输入..."
+        android:paddingLeft="15dp"
+        android:textColor="@android:color/black"
+        android:textSize="14dp" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
